refactor: CardGame의 역할을 Deck으로 이동